<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/beacon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/BeaconName"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <TextView
        android:id="@+id/beacon_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/Address" />

    <TextView
        android:id="@+id/beacon_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/BeaconInterval" />

    <TextView
        android:id="@+id/beacon_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/BeaconRSSI" />

    <TextView
        android:id="@+id/beacon_frames_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/BeaconFrames" />

</LinearLayout>